--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,11 +1,7 @@
 FROM node:20
 
-# Install Devvit CLI
-RUN npm install -g @devvit/cli
+RUN npm install -g @devvit/cli prettier eslint && \
+    ln -s $(npm root -g)/@devvit/cli/bin/devvit.js /usr/local/bin/devvit
 
 WORKDIR /workspace
 
-# Optional dev tools
-RUN npm install -g prettier eslint
-
-EXPOSE 3000
